discussion/kv_engine/149093/149093_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add magma WriteDocs histograms for cbstats kvtimings

Change-Id: I7eb4d8c5f2c88653c4e39c56b5a2f0ffa11239ab

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-03-19 23:29:14.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-19 23:56:42.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29539/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29539/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34416/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2519): error C2039: "GetHistograms": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34416/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7811/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25: error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
    auto histo = magma->GetHistograms();
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7811/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7811/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8438/ : FAILURE

Compile error at [2021-03-19T23:31:49.796Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8438/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9521/ : FAILURE

Compile error at [2021-03-19T23:36:18.546Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: ?class magma::Magma? has no member named ?GetHistograms?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9521/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9734/ : FAILURE

Compile error at [2021-03-19T23:31:23.684Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9734/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17288/ : FAILURE

Compile error at [2021-03-19T23:41:59.693Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17288/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6353/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9375/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
